<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#FFAAAAAA"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2.236"
        android:background="#FFAAAAAA"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@drawable/bg_textview_shape"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_test1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1.118"
                android:background="@drawable/button_selector"
                android:padding="5dp"
                android:text="@string/test1"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_test2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1.0"
                android:background="@drawable/button_selector"
                android:text="@string/test2"
                android:textAllCaps="false"
                android:textSize="13sp" />
            <Button
                android:id="@+id/btn_test3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1.0"
                android:background="@drawable/button_selector"
                android:text="@string/test3"
                android:visibility="gone"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:background="#FFAAAAAA"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:id="@+id/text_warning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_textview_shape"
                android:padding="5dp"
                android:text="@string/info_hint"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_log_clean"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.0"
                android:background="@drawable/button_selector"
                android:text="@string/log_clean"
                android:visibility="gone"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="5dp"
        android:layout_weight="3.618"
        android:orientation="vertical">

        <!--<ImageView-->
            <!--android:id="@+id/image"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->

        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_textview_shape"
            android:hint="@string/logcat_output"
            android:scrollbars="vertical"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>